--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <h2 class="title">Sobre</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image/img-4.jpg" alt="">
+                    <img src="./Image/img-4.jpg" alt="">
                 </div>
                 <div class="column right">
                     <div class="text">Sou Leandro Leite e sou <span class="typing-2"></span></div>
