--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
 
     <!--home inicio-->
-    <section class="home" id="home">
+    <section class="home" id="home" style="background: url(./Image/banner.png) no-repeat;" >
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Olá, meu nome é</div>
